kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: easyshop-ns
  labels:
    name: easyshop-ns
    environment: production
