kubernetes/mongodb-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: easyshop-ns
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongodb-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
        - name: mongodb-storage
          mountPath: /data/db
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
