kubernetes/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: easyshop-ns
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
